<resources>
    <string name="app_name">Commer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeTitle1">Selamat Datang di Commer</string>
    <string name="welcomeDesc1">Commer menghadirkan platform komunitas bagi Anda untuk belajar atau berbagi hal-hal baru seputar game.</string>
    <string name="welcomeTitle2">Sempurnakan penggunaan dari Commer</string>
    <string name="welcomeDesc2"><font color="#00229B"><b>Berlangganan</b></font> akan menyempurnakan pengalaman Anda dengan akun verifikasi yang optimal. Layanan ini akan memberikan kenyamanan bagi pengguna untuk berinteraksi dan mendapatkan informasi yang akurat dari orang-orang terpercaya oleh Commer.</string>
    <string name="welcomeTitle3">Ini kesempatan untukmu !</string>
    <string name="log_in">Masuk</string>
    <string name="welcomeDesc3">Tidak hanya berbagi informasi, dengan <font color="#00229B"><b>Commer</b></font> kini tersedia TOKO COMMER yang menyedikan kebutuhan akun game Anda.</string>
    <string name="sign_up">Daftar</string>
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="dont_have_account">Belum punya akun ?</string>
    <string name="log_in_with">Masuk dengan akun yang sudah ada</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="enter_your_full_name_here">Masukkan nama lengkap</string>
    <string name="email">Email</string>
    <string name="enter_your_email_here">Masukkan alamat email</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="enter_your_phone_number_here">Masukkan nomor telepon</string>
    <string-array name="domicile">
        <item>ACEH</item>
        <item>BALI</item>
        <item>BANTEN</item>
        <item>BENGKULU</item>
        <item>DI YOGYAKARTA</item>
        <item>DKI JAKARTA</item>
        <item>GORONTALO</item>
        <item>JAMBI</item>
        <item>JAWA BARAT</item>
        <item>JAWA TENGAH</item>
        <item>JAWA TIMUR</item>
        <item>KALIMANTAN BARAT</item>
        <item>KALIMANTAN SELATAN</item>
        <item>KALIMANTAN TENGAH</item>
        <item>KALIMANTAN TIMUR</item>
        <item>KALIMANTAN UTARA</item>
        <item>KEPULAUAN BANGKA BELITUNG</item>
        <item>KEPULAUAN RIAU</item>
        <item>LAMPUNG</item>
        <item>MALUKU UTARA</item>
        <item>MALUKU</item>
        <item>NUSA TENGGARA BARAT</item>
        <item>NUSA TENGGARA TIMUR</item>
        <item>PAPUA BARAT</item>
        <item>PAPUA</item>
        <item>RIAU</item>
        <item>SULAWESI BARAT</item>
        <item>SULAWESI SELATAN</item>
        <item>SULAWESI TENGAH</item>
        <item>SULAWESI TENGGARA</item>
        <item>SULAWESI UTARA</item>
        <item>SUMATERA BARAT</item>
        <item>SUMATERA SELATAN</item>
        <item>SUMATERA UTARA</item>
    </string-array>
    <string name="select_your_option">Pilih opsi</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
        <item>Dirahasiakan</item>
    </string-array>
    <string name="password">Kata Sandi</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="enter_your_password_here">Masukkan kata sandi</string>
    <string name="already_have_an_account">Sudah punya akun ?</string>
    <string name="login">Masuk</string>
    <string name="terms_and_conditions">Dengan membuat akun berarti Anda menyetujui <b>Syarat &#38; Ketentuan</b> dan <b>Kebijakan Privasi</b></string>
    <string name="create_your_new_account">Buat akun baru dan mulai berbagi hal hal baru !</string>
    <string name="password_must_be">Kata sandi harus minimal 6 karakter dan harus mengandung angka &#38; huruf.</string>
    <string name="something_wrong_email">Ada yang salah dengan alamat email, silakan periksa alamat email Anda lagi.</string>
    <string name="something_wrong_phone">Ada yang salah dengan nomor telepon, pastikan nomor Anda dimulai dengan +62 / 62.</string>
    <string name="something_wrong_name">Terdapat kesalahan, harap periksa nama Anda.</string>
    <string name="please_choose_domicile">Silakan pilih domisili.</string>
    <string name="please_choose_gender">Silakan pilih jenis kelamin.</string>
    <string name="choose_your_interests">Sesuaikan minat \n game Anda</string>
    <string name="one_more_step">Satu langkah lagi dan siap berbagi hal-hal baru!</string>
    <string name="mobile_legend">Mobile Legends</string>
    <string name="pubgm">PUBGM</string>
    <string name="free_fire">Free Fire</string>
    <string name="android">Clash of Clans</string>
    <string name="aov">Arena of Valor</string>
    <string name="reset_password">Atur Kata Sandi</string>
    <string name="enter_your_registered">Masukkan alamat email yang telah terdaftar</string>
    <string name="email_address">Email Anda</string>
    <string name="email_address_in_format">Masukkan alamat email dalam format nama@contoh.com</string>
    <string name="resend_code">Kirim Ulang Kode</string>
    <string name="password_not_match">Kata sandi dan konfirmasi Anda tidak cocok, silakan coba lagi.</string>
    <string name="reset_your_password">Atur Kata Sandi</string>
    <string name="create_your_new_password">Buat kata sandi baru</string>
    <string name="confirm_your_new_password_here">Konfirmasi kata sandi baru disini</string>
    <string name="confirm_new_password">Konfirmasi kata sandi baru</string>
    <string name="reset">Reset</string>
    <string name="verification_code">Kode Verifikasi</string>
    <string name="please_enter_4_digit_code">Masukkan kode 4 digit yang telah kami kirimkan</string>
    <string name="password_reseted_succesfully">Kata sandi telah berhasil diatur ulang</string>
    <string name="now_you_can_log_in">Sekarang Anda dapat Masuk dengan kata sandi baru.</string>
    <string name="return_to_login">Kembali ke Login</string>
    <string name="forgot_password">Lupa kata sandi ?</string>
    <string name="incorrect_password_please">Kata sandi salah, silakan coba lagi atau <b>atur kata sandi Anda.</b></string>
    <string name="we_cant_find_an_account">Kami tidak dapat menemukan akun dengan alamat email ini. Silakan coba lagi atau buat akun baru.</string>
    <string name="loading">Memuat</string>
    <string name="home">Beranda</string>
    <string name="simpler">Simpler</string>
    <string name="my_chance">My Chance</string>
    <string name="profile">Profil</string>
    <string name="search_result_for">Hasil pencarian untuk</string>
    <string name="new_post">Postingan Baru</string>
    <string name="write_something">Menulis sesuatu</string>
    <string name="post">Postingan</string>
    <string name="topics">Topik</string>
    <string name="choose_topics_that_match_your_post">Pilih topik yang sesuai dengan postingan Anda</string>
    <string name="follow">Ikuti</string>
    <string name="followed">Mengikuti</string>
    <string name="who_can_see_your_post">Siapa yang dapat melihat postingan Anda?</string>
    <string name="choose_who_can_see_your_post">Pilih siapa yang dapat melihat postingan</string>
    <string name="public_post">Postingan publik</string>
    <string name="everyone_will_be_able">Semua orang akan dapat melihat postingan Anda</string>
    <string name="simpler_post">Postingan Simpler</string>
    <string name="subscribers_only">Pelanggan saja</string>
    <string name="search">Pencarian</string>
    <string name="posts">Postingan</string>
    <string name="filter">Filter</string>
    <string name="suggested_people">Orang yang Disarankan</string>
    <string name="filter_posts_by_topics">Filter postingan sesuai topik</string>
    <string name="apply_filter">Terapkan filter</string>
    <string name="saved_to_bookmarks">Disimpan ke bookmarks</string>
    <string name="close">Tutup</string>
    <string name="delete">Hapus</string>
    <string name="share">Bagikan</string>
    <string name="report">Laporkan</string>
    <string name="title_activity_subscription_plan">SubscriptionPlanActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Sebelumnya</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="premium_contents_or_posts_">Konten atau postingan khusus dari <b>Commer</b> and <b>Pengguna berlangganan</b></string>
    <string name="it_contents_with_">Sekumpulan pengguna terpercaya dan dapat melakukan jual beli akun game yang dihadirkan <b>Commer</b> untuk mempermudah dan mengurangi informasi palsu</string>
    <string name="simpler_x_months_plan_details">Berlangganan <b>X bulan</b> detail rincian</string>
    <string name="what_you_ll_get">Apa yang akan Anda dapatkan</string>
    <string name="change_plan">Ubah rencana</string>
    <string name="simpler_x_months_plan">Berlangganan x bulan</string>
    <string name="summary_order">Ringkasan Pesanan</string>
    <string name="for_x_months">(Untuk x bulan)</string>
    <string name="expiry_date">Tanggal berakhir</string>
    <string name="contact_us_and_faq">Kontak Kami &amp; FAQ</string>
    <string name="for_customer_service_and_business_matter_only">Hanya untuk layanan pelanggan dan masalah bisnis. Jika Anda ingin melakukan Verifikasi Akun, harap baca FAQ terlebih dahulu sebelum menghubungi kami.</string>
    <string name="tech_commitapp_gmail_com">commerapp@gmail.com</string>
    <string name="faq">FAQ</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="what_do_i_get_as_a_verified_user">Apa yang saya dapatkan sebagai pengguna Terverifikasi?</string>
    <string name="as_soon_as_you_are_registered_as_a_verified_user">Segera setelah Anda terdaftar sebagai pengguna Terverifikasi, Anda akan mendapatkan konten Premium di COMMER dan dapat melakukan jual beli akun game.</string>
    <string name="how_to_verify_my_account">Bagaimana cara memverifikasi akun saya?</string>
    <string name="field_how_to_verify_my_account">1. Pastikan jumlah pengikut Anda telah mencapai atau melebihi 10 pengikut.\n2. Siapkan scan Kartu ID Anda.\n3. Kirimkan email tersebut ke alamat email kami yang tertera di Kontak Kami, dengan subjek email “Verifikasi Akun” dan informasi berikut sebagai nama akun, nama bank, dan nomor akun Anda.\n4. Lampirkan scan Kartu ID Anda untuk verifikasi.\n5. Harap bersabar menunggu sampai informasi lebih lanjut dalam waktu 2-5 hari kerja.</string>
    <string name="removed_from_bookmarks">Hapus dari bookmarks</string>
    <string name="what_is_toko">Apa itu fitur toko?</string>
    <string name="toko_feature">Fitur toko merupakan tempat bagi pengguna untuk melakukan kegiatan pembelian produk berupa akun dari berbagai game yang telah disediakan oleh admin toko Commer.</string>
    <string name="how_to_buy">Bagaimana cara membeli produk di toko Commer?</string>
    <string name="step_buy">1. Kunjungi toko Commer dengan ketuk icon keranjang di pojok kanan atas pada halaman beranda.\n2. Cari dan pilih produk yang Anda butuhkan.\n3. Ketuk produk dan baca detail informasi yang tersedia pada halaman detail produk yang Anda pilih.\n4. Apabila telah sesuai yang Anda butuhkan, ketuk "Beli sekarang".\n5. Lakukan pembayaran sesuai arahan yang sudah tertera pada halaman tersebut.\n6. Tunggu dalam 2x24 jam hingga admin toko menghubungi kontak yang tertera pada infomasi biodata akun Commer Anda.</string>
    <string name="can_user_sell_product">Apakah saya bisa menjual produk di toko Commer?</string>
    <string name="user_can_sell">Seluruh pengguna akun Commer dapat menjual produknya di toko Commer melalui kontak admin toko by Whatsapp +62 823–3842-5976 atau kunjungi tautan dibawah ini</string>
    <string name="link_wa">https://bit.ly/41unJLx</string>
</resources>