<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.contact.ContactUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTxtContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:paddingVertical="@dimen/_21dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_31dp"
            android:background="@color/primary_color"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/contact_us_and_faq"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/imgBtnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgBtnBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintTxtContactUs">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24dp"
                android:layout_marginTop="@dimen/_32dp"
                android:orientation="vertical"
                android:paddingBottom="52dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/ContactUs.Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/for_customer_service_and_business_matter_only" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:autoLink="email"
                    android:text="@string/tech_commitapp_gmail_com"
                    android:textColor="@color/text_link" />

                <TextView
                    style="@style/ContactUs.Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:text="@string/faq" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4dp"
                    android:text="@string/frequently_asked_questions"
                    android:textColor="@color/secondary" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24dp"
                    android:text="@string/what_do_i_get_as_a_verified_user" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/as_soon_as_you_are_registered_as_a_verified_user" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/how_to_verify_my_account" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/field_how_to_verify_my_account" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/what_is_toko" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/toko_feature" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/how_to_buy" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/step_buy" />

                <TextView
                    style="@style/ContactUs.Text.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/can_user_sell_product" />

                <TextView
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/user_can_sell" />

                <TextView
                    android:id="@+id/linkWa"
                    style="@style/ContactUs.Text.Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2dp"
                    android:text="@string/link_wa"
                    android:textColor="@color/primary_color" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>