<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcomepage.screens.SecondScreen">

    <ImageView
        android:id="@+id/imgWelcomePage"
        android:layout_width="@dimen/_0dp"
        android:layout_height="270dp"
        android:layout_margin="@dimen/_40dp"
        android:src="@drawable/second_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcomeTitle"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_700"
        android:text="@string/welcomeTitle2"
        android:textColor="@color/text_primary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgWelcomePage" />

    <TextView
        android:id="@+id/txtWelcomeDescription"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_400"
        android:text="@string/welcomeDesc2"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@id/txtWelcomeTitle"
        app:layout_constraintStart_toStartOf="@id/txtWelcomeTitle"
        app:layout_constraintTop_toBottomOf="@id/txtWelcomeTitle" />

    <TextView
        android:id="@+id/btnSkipWelcomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_82dp"
        android:fontFamily="@font/poppins_700"
        android:text="@string/skip"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtWelcomeTitle" />

    <TextView
        android:id="@+id/btnNextWelcomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_700"
        android:text="@string/next"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="@id/btnSkipWelcomePage"
        app:layout_constraintEnd_toEndOf="@id/txtWelcomeTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>