<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/text_secondary">

    <ImageView
        android:id="@+id/icSavePostWhite"
        android:layout_width="@dimen/_10dp"
        android:layout_height="@dimen/_14dp"
        android:layout_marginHorizontal="@dimen/_12dp"
        android:layout_marginVertical="@dimen/_12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_save_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtSaved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:fontFamily="@font/poppins_600"
        android:text="@string/removed_from_bookmarks"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@id/icSavePostWhite"
        app:layout_constraintStart_toEndOf="@id/icSavePostWhite"
        app:layout_constraintTop_toTopOf="@id/icSavePostWhite" />

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@id/icSavePostWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/icSavePostWhite" />

</androidx.constraintlayout.widget.ConstraintLayout>